--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     
-  <header class="app-header">
+  <header class="app-header header-panel">
     <h1>Spencer and Williams</h1>
     <div id="searchbox"></div>
   </header>
@@ -35,10 +35,10 @@
         <div id="category-menu"></div>
       </div>
 
-      <div class="facet">
+      <!-- <div class="facet">
         <h4>Price</h4>
         <div id="price-range"></div>
-      </div>
+      </div> -->
     </aside>
 
     <!-- Right: Results -->
